Fix crash in Mac OS X native menus when attribute change notifications come in an order we don't expect. Allow for any attribute change notification order. b=433858 r=mstange sr=roc